<resources>
    <string name="app_name">Kantin</string>
    <string name="login">Masuk</string>
    <string name="btn_login">MASUK</string>
    <string name="btn_register">DAFTAR</string>
    <string name="login_sub">
        <font color="#938D8D"><b>Selamat datang kembali</b></font>
    </string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_sandi">Lupa Kata Sandi</string>
    <string name="tidak_ada_akun">Tidak Punya Akun
        <font color="7D6C2E"><b> Buat Akun </b></font>
    </string>
    <string name="daftar">Daftar Akun</string>
    <string name="sub_daftar">Daftar Akun Anda Sekarang</string>
    <string name="nama">Nama</string>
    <string name="no_telepon">No Telepon</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="btn_mulai">Ayo Mulai</string>
    <string name="welcome">Halo, Rini</string>
    <string name="pilih_kantin">Pilih Kantinmu</string>
    <string name="kantin_1">Kantin 1</string>
    <string name="kantin_2">Kantin 2</string>
    <string name="kantin_3">Kantin 3</string>
    <string name="kantin_4">Kantin 4</string>
    <string name="favoritmu">Favoritmu</string>
    <string name="keranjang">Keranjang</string>
    <string name="bayar">Bayar Rp %1$d</string>
    <string name="hello_blank_fragment">Halo fragmen kosong</string>
    <string name="favorit">Favorit</string>
    <string name="menu">Menu</string>
    <string name="kategori">Kategori</string>
    <string name="minuman">Minuman</string>
    <string name="mie">Mie</string>
    <string name="gorengan">Gorengan</string>
    <string name="pilih_menu">Pilih Menu Andalan Kamu</string>
    <string name="pilih_semua">Tampilkan Semua</string>
    <string name="nama_item">Nama Item</string>
    <string name="deskripsi_singkat">Deskripsi Singkat</string>
    <string name="harga">Harga</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="default_quantity">0</string>
    <string name="pesananmu">Pesananmu</string>
    <string name="order_details">Detail Pesanan</string>
    <string name="total_price">Total Harga</string>
    <string name="default_price">Harga Standar</string>
    <string name="sub_total">Sub Total</string>
    <string name="waktu_proses">Waktu Proses Makanan</string>
    <string name="Bayar">Bayar</string>
    <string name="rate">4.2</string>
    <string name="waktu_order">5 Menit</string>
    <string name="payment_method">Pilih Pembayaran</string>
    <string name="cash_payment">Tunai</string>
    <string name="confirm_payment">Konfirmasi</string>
    <string name="account">Akun</string>
    <string name="food_menu">Menu Makanan</string>
    <string name="my_orders">Pesanan Saya</string>
    <string name="orders_history">Riwayat Pesanan</string>
    <string name="log_out">Keluar</string>
    <string name="profile">Profil</string>
    <string name="nothing_order">Tidak Ada Riwayat Pemesanan</string>
    <string name="default_date_and_time">1 September 2023 pukul 12.30</string>
    <string name="order_id">ID Pesanan:</string>
    <string name="noPesanan">MQ61823</string>
    <string name="order_status">Status Pesanan:</string>
    <string name="order_successful">Pesanan Sukses</string>
    <string name="pembayaran">Pembayaran:</string>
    <string name="jenis_pembayaran">Pembayaran: Tunai</string>
    <string name="harga_order">Rp.15.000</string>
    <string name="belum_ada_pesanan">Belum Ada Pesanan</string>
    <string name="waktu_pemesanan">Estimasi Waktu Untuk Mengambil Pesanan:</string>
    <string name="jam">12.30</string>
    <string name="pesanan_selesai">Pesanan Selesai</string>
    <string name="cancel_order">Batalkan Pesanan</string>
    <string name="menu_icon">ikon_menu</string>
    <string name="pesanan_berhasil">Pesanan Berhasil</string>
    <string name="pending">Menunggu: Tunai</string>
    <string name="process">Diproses</string>
    <string name="hi">Halo %1$s</string>
    <string name="total">Total</string>
    <string name="hello">Halo\n</string>
    <string name="name">Nama\n</string>
    <string name="sudah_punya_akun_login">Sudah punya akun? Masuk</string>
    <string name="daftar_sebagai_penjual">Daftar sebagai penjual</string>
    <string name="open">Buka\n</string>
    <string name="close">Tutup</string>
    <string name="dashboard">Dasbor</string>
    <string name="produk">Produk</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="order">Pesanan</string>
    <string name="ulasan_dan_rating">Ulasan dan Penilaian</string>
    <string name="add_item">Tambahkan Item</string>
    <string name="tambah_item">Tambahkan Item</string>
    <string name="edit_item">Edit Item</string>
    <string-array name="data_dropdown">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Camilan</item>
    </string-array>
    <string name="pilih_kategori">PILIH KATEGORI</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="upload_image">Unggah Produk</string>
    <string name="stock">Stok</string>
    <string name="tax">Pajak</string>
    <string name="show_this_qr_code_to_your_office_canteen">Tunjukkan kode QR ini ke kantin kantor Anda\n</string>
    <string name="food_categories">Kategori Makanan</string>
    <string name="fruits">Buah-Buahan</string>
    <string name="cake">Kue</string>
    <string name="pizza">Pizza</string>
    <string name="soup">Sup</string>
    <string name="snacks">Makanan Ringan</string>
    <string name="cookies">Kue Kering</string>
    <string name="cold_drink">Minuman Dingin</string>
    <string name="here_s_what_i_found_for_you">Ini yang saya temukan untuk Anda</string>
    <string name="show_all">Tampilkan Semua</string>
    <string name="noodles">Mi</string>
    <string name="short_item_description">Deskripsi Singkat Item</string>
    <string name="item_name">Nama Item</string>
    <string name="place_order">Pesan</string>
    <string name="your_order_default_items">Pesanan Anda (0 item)</string>
    <string name="your_order">Pesanan Anda</string>
    <string name="time_for_take_away_of_order">Waktu Pengambilan Pesanan</string>
    <string name="change_time">Ubah Waktu</string>
    <string name="proceed_to_pay">Lanjut ke Pembayaran</string>
    <string name="create_account">Buat Akun</string>
    <string name="enjoy_your_meal">Selamat Menikmati Makanan Anda</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="e_mail">Email</string>
    <string name="company_organization">Perusahaan / Organisasi</string>
    <string name="mobile_number">Nomor Telepon</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="create_password">Buat Kata Sandi</string>
    <string name="employee_id">ID Karyawan</string>
    <string name="employee_id_card">Kartu ID Karyawan</string>
    <string name="upload">Unggah</string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[Saya setuju dengan Ketentuan & Syarat]]></string>
    <string name="preview">Pratinjau</string>
    <string name="register">Daftar</string>
    <string name="preview_details">Pratinjau Detail</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="select_your_gender">Pilih Jenis Kelamin Anda</string>
    <string name="save">Simpan</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="your_id_card">Kartu ID Anda</string>
    <string name="field_empty">Kolom tidak boleh kosong</string>
    <string name="invalid_email">Email Tidak Valid</string>
    <string name="invalid_mobile_no">Nomor Telepon Tidak Valid</string>
    <string name="already_have_a_account">Sudah Punya Akun?</string>
    <string name="saved_cards">Kartu yang Tersimpan</string>
    <string name="credit_or_debit_card">Kartu Kredit atau Debit</string>
    <string name="bhim_upi">BHIM UPI</string>
    <string name="net_banking">Internet Banking</string>
    <string name="wallets">Dompet Digital</string>
    <string name="pay_securely">Bayar dengan Aman</string>
    <string name="card_number">Nomor Kartu</string>
    <string name="card_holder_name">Nama Pemegang Kartu</string>
    <string name="expiry_validity_date">Tanggal Kedaluwarsa / Validitas</string>
    <string name="cvv">CVV</string>
    <string name="payment">Pembayaran</string>
    <string name="date">TANGGAL</string>
    <string name="total_amount">Total Jumlah</string>
    <string name="done">Selesai</string>
    <string name="dollar">$</string>
    <string name="order_take_away_time">Waktu Pengambilan Pesanan</string>
    <string name="processing">Diproses</string>
    <string name="enter_your_upi_id">Masukkan ID UPI Anda</string>
    <string name="username_bank">username@bank</string>
    <string name="default_order_id">ID Pesanan: CA124432</string>
    <string name="welcome_back">Selamat Datang Kembali</string>
    <string name="don_t_have_a_account">Belum Punya Akun?</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="next">Selanjutnya</string>
    <string name="full_details">Detail Lengkap</string>
    <string name="cafy_reg_id">ID Registrasi Cafy</string>
    <string name="reg_date">Tanggal Registrasi</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="description">Deskripsi</string>
    <string name="my_favourites">Favorit Saya</string>
    <string name="ok">OK</string>
    <string name="need_help_contact_us">Butuh Bantuan? Hubungi Kami</string>
    <string name="seems_like_you_have_not_ordered_anything">Sepertinya Anda belum memesan apapun!</string>
    <string name="nothing_in_your_order_history">Tidak ada dalam Riwayat Pesanan Anda</string>
    <string name="pay">Bayar</string>
    <string name="save_this_card_for_future_payments">Simpan kartu ini untuk pembayaran mendatang</string>
    <string name="mm_yy">MM/YY</string>
    <string name="saved_details">Detail yang Tersimpan</string>
    <string name="update_menu">Perbarui Menu</string>
    <string name="settings">Pengaturan</string>
    <string name="remove_all_the_previous_orders_details">Hapus semua detail pesanan sebelumnya</string>
    <string name="delete_orders_history">Hapus Riwayat Pesanan</string>
    <string name="developer">Pengembang</string>
    <string name="app_version">Versi Aplikasi</string>
    <string name="about">Tentang</string>
    <string name="developer_name">Roshan Kumar</string>
    <string name="remove_all_the_saved_cards">Hapus semua kartu yang tersimpan</string>
    <string name="delete_saved_cards">Hapus Kartu yang Tersimpan</string>
    <string name="delete_all_the_menu_items_from_offline_data">Hapus semua item menu dari data offline</string>
    <string name="delete_menu">Hapus Menu</string>
    <string name="update_the_latest_food_menu_for_offline">Perbarui menu makanan terbaru untuk digunakan secara offline</string>
    <string name="offline">Luar Jaringan</string>
    <string name="menu_mode">Mode Menu</string>
    <string name="on">Aktif</string>
    <string name="load_item_images">Muat Gambar Item</string>
    <string name="data_saving">Simpan Data</string>
    <string name="support">Dukungan</string>
    <string name="share_app">Bagikan Aplikasi</string>
    <string name="report_bug">Laporkan Bug</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="message">Pesan</string>
    <string name="have_a_problem">Mengalami Masalah!</string>
    <string name="call">Hubungi</string>
    <string name="daftar_akun_sebagai_penjual">Daftar akun sebagai penjual</string>
    <string name="daftar_akun_penjual">Daftar Akun Penjual</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="desc_reset">Masukkan email yang akan dikirimi link untuk menyetel ulang kata sandi</string>
    <string name="kirim">Kirim</string>
    <string name="kembali">Kembali</string>
</resources>