<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_history_item_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_date_and_time"
        android:background="#F5F5F5"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/order_id"
                    android:textColor="@color/text_light_color"/>
                <TextView
                    android:id="@+id/order_history_item_order_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noPesanan"
                    android:textColor="@color/text_dark_color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/order_status"
                    android:textColor="@color/text_light_color"/>
                <TextView
                    android:id="@+id/order_history_item_order_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_successful"
                    android:textColor="@color/text_dark_color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/pembayaran"
                    android:textColor="@color/text_light_color"/>
                <TextView
                    android:id="@+id/order_history_item_order_payment_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_pembayaran"
                    android:textColor="@color/text_dark_color"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/order_history_item_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_order"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/primary"
            android:fontFamily="@font/montserrat_semi_bold" />

    </LinearLayout>

</LinearLayout>